# rust-tdlib

./: Cargo.toml
src/client/: client.rs  worker.rs
